cli and web uis section plus misc fixes to formatting everywhere

--- a/modules/ch1-intro/pages/index.adoc
+++ b/modules/ch1-intro/pages/index.adoc
@@ -1,6 +1,6 @@
 = Introduction to Red Hat OpenStack
 
-== Objective
+Goal::
 
 Describe the Red Hat OpenStack products and how they relate to other Red Hat products, partner products, upstream projects, and IT professional roles.
 
