--- a/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
+++ b/modules/ch1-intro/pages/s1-rhoso-lecture.adoc
@@ -1,6 +1,6 @@
 = What is Red Hat OpenStack Services on OpenShift
 
-*Objective:*
+Objective::
 
 Describe the Red Hat OpenStack product and how it relates to the OpenStack open source project.
 
