--- a/modules/ch1-intro/pages/s4-tasks-quiz.adoc
+++ b/modules/ch1-intro/pages/s4-tasks-quiz.adoc
@@ -1,6 +1,6 @@
 = Quiz: Red Hat OpenStack Operations Tasks
 
-*Objective:* 
+Objective::
 
 Relate tasks to OpenStack administrators, operators, and other IT roles.
 
