--- a/modules/ch1-intro/pages/s7-review-quiz.adoc
+++ b/modules/ch1-intro/pages/s7-review-quiz.adoc
@@ -1,6 +1,6 @@
 = Review Quiz: Red Hat OpenStack Operations
 
-*Objective:*
+Objective::
 
 Assess the learner's understanding of the scope of OpenStack operations with Red Hat OpenStack on OpenShift.
 
