--- a/modules/ch2-services/pages/s1-fundamental-lecture.adoc
+++ b/modules/ch2-services/pages/s1-fundamental-lecture.adoc
@@ -1,6 +1,6 @@
 = Fundamental Services of Red Hat OpenStack
 
-*Objective:*
+Objective::
 
 Describe the OpenStack services required by typical applications and their virtual machines.
 
