--- a/modules/ch1-intro/pages/s2-components-quiz.adoc
+++ b/modules/ch1-intro/pages/s2-components-quiz.adoc
@@ -1,6 +1,6 @@
 = Quiz: Components of Red Hat OpenStack on OpenShift
 
-*Objective:* 
+Objective::
 
 Identify components of the Red Hat OpenStack on OpenShift product and how a Red Hat OpenStack cluster runs application VMs.
 
